Update "load more"

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>goit-js-hw-11</title>
+    <title>goit-js-hw-10</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
@@ -47,6 +47,10 @@
           </ul>
         </li> -->
       </ul>
+      <button id="showMore" style="display: none">Load more</button>
+      <div class="loader-showMore" style="display: none">
+        Loading images, please wait...
+      </div>
     </main>
 
     <script type="module" src="./main.js"></script>
